Add project production overview
